frame/support/test/tests/pallet_ui/step_006-2.stderr
error: Invalid pallet::trait, expect explicit `frame_system::Trait` as supertrait, found none.
 --> $DIR/step_006-2.rs:4:2
  |
4 |     pub trait Trait {}
  |     ^^^
